--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -43,7 +44,9 @@
 
 <body>
     <header>
-        <div class="logo"><a href="index.html"></a></div>
+        <div class="logo"><a href="index.html">
+            <img src="images/logo.png" alt="logo"></a>
+        </div>
         <section class="leftbar">
             <ul>
                 <li><a href="#page1">Profile</a></li>
@@ -73,6 +76,9 @@
                 <div class="title" data-0="font-size : 8rem;" data-1000="font-size : 4.3rem">
                     <h2>PROFILE</h2>
                 </div>
+                <div class="p-title">
+                    <h2>PROFILE</h2>
+                </div>
                 <div class="inner">
                     <div class="intro">
                         <p><span>미</span>래를 담아낸 디자인,</p>
@@ -100,7 +106,6 @@
                                     <div class="pbox">
                                         <p class="yellow">Certificate</p>
                                         <ul>
-                                            <li>웹디자인개발기능사 (필기)</li>
                                             <li>GTQ그래픽기술자격 1급</li>
                                             <li>GTQ일러스트 1급</li>
                                             <li>컴퓨터활용능력 1급</li>
@@ -136,6 +141,9 @@
         <section id="page2" class="coding section">
             <div class="container">
                 <div class="title" data-1000="font-size : 8rem;" data-2000="font-size : 4.3rem">
+                    <h2>PROJECT</h2>
+                </div>
+                <div class="p-title">
                     <h2>PROJECT</h2>
                 </div>
                 <div class="inner">
@@ -374,7 +382,7 @@
                                     <div class="hover-inner">
                                         <p>바샤커피</p>
                                         <p>상세페이지</p>
-                                        <a href="#">자세히보기</a>
+                                        <a href="images/detailed_page1.pdf" target="_blank">자세히보기</a>
                                     </div>
                                 </div>
                             </div>
@@ -384,7 +392,7 @@
                                     <div class="hover-inner">
                                         <p>보웰 발매트</p>
                                         <p>상세페이지</p>
-                                        <a href="#">자세히보기</a>
+                                        <a href="images/detailed_page2.pdf" target="_blank">자세히보기</a>
                                     </div>
                                 </div>
                             </div>
