--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                                     javaScript,Photoshop</p>
                             <p>Type  :  팀협업 33%</p>
                             <div class="btn">
-                                <div class="btnwrap"><a class="Process" href="#">Process</a></div>
-                                <div class="btnwrap"><a class="Prototype" href="#">Prototype</a></div>
+                                <div class="btnwrap"><a class="Process" href="https://www.figma.com/proto/0RJXrA0EuRVLTK7fYFw7Kv/%EA%B1%B4%EA%B0%95%EA%B4%80%EB%A6%AC%EC%95%B1_%EC%BD%A9%EC%9E%87-%EC%95%B1%EB%94%94%EC%9E%90%EC%9D%B8(%ED%8C%80)?node-id=24-6&t=iaiVbrWKS3MYwTb8-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=178%3A340&show-proto-sidebar=1" target="_blank">Process</a></div>
+                                <div class="btnwrap"><a class="Prototype" href="images/kongit.pdf" target="_blank">Prototype</a></div>
                             </div>
                         </div>
                         <div class="txtbox">
