--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <div class="logo"><a href="index.html">
             <img src="images/logo.png" alt="logo"></a>
         </div>
+        <div class="m-logo"><a href="index.html">
+                <img src="images/logo2.png" alt="m-logo"></a>
+        </div>
         <section class="leftbar">
             <ul>
                 <li><a href="#page1">Profile</a></li>
@@ -55,6 +58,22 @@
                 <li><a href="#page4">App Design</a></li>
                 <li><a href="#page5">Design Works</a></li>
             </ul>
+        </section>
+        <section class="mobile">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="m-nav">
+                <ul>
+                    <li><a href="#page1">Profile</a></li>
+                    <li><a href="#page2">Clone Coding</a></li>
+                    <li><a href="#page3">Web Re-Design</a></li>
+                    <li><a href="#page4">App Design</a></li>
+                    <li><a href="#page5">Design Works</a></li>
+                </ul>
+            </div>
         </section>
     </header>
     <main>
@@ -81,8 +100,9 @@
                 </div>
                 <div class="inner">
                     <div class="intro">
-                        <p><span>미</span>래를 담아낸 디자인,</p>
-                        <p><span>솔</span>루션과 가치를 창조하는 디자이너 <span>홍미솔</span>입니다.</p>
+                        <p><span>미</span>래를 담아낸 디자인,<br>
+                        <span>솔</span>루션과 가치를 창조하는 디자이너 
+                            <span>홍미솔</span>입니다.</p>
                     </div>
                     <div class="content">
                         <div class="mainimg"></div>
@@ -222,6 +242,48 @@
                                 </div>
                             </div>
                         </div>
+                      </div>
+
+                        <div class="swiper mobile-Swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="images/happypoint.jpg" alt="happypoint">
+                                    <div class="text">
+                                        <h2>현대백화점 해피포인트</h2>
+                                        <p>Tools  :  HTML5, CSS3, jQuery, javaScript</p>
+                                        <p>Type  :  개인작업 100%</p>
+                                    </div>
+                                    <div class="btn">
+                                        <div class="btnwrap"><a class="original" href="https://www.h-point.co.kr/cu/main/index.nhd" target="_blank">Original</a></div>
+                                        <div class="btnwrap"><a class="clone" href="https://sol5511.github.io/happypoint/" target="_blank">Clone</a></div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide"> <img src="images/coramdeo.jpg" alt="coramdeo">
+                                    <div class="text">
+                                        <h2>코람데오 기찬어가</h2>
+                                        <p>Tools  :  HTML5, CSS3, jQuery, javaScript</p>
+                                     <p>Type  :  개인작업 100%</p>
+                                    </div>
+                                    <div class="btn">
+                                        <div class="btnwrap"><a class="original" href="http://www.coramdeo0213.com/main/main.php" target="_blank">Original</a></div>
+                                        <div class="btnwrap"><a class="clone" href="https://sol5511.github.io/coramdeo/" target="_blank">Clone</a></div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/marongmarong.jpg" alt="marongmarong">
+                                    <div class="text">
+                                        <h2>마롱마롱 디자인 스튜디오</h2>
+                                        <p>Tools  :  HTML5, CSS3, jQuery, javaScript</p>
+                                        <p>Type  :  개인작업 100%</p>
+                                    </div>
+                                    <div class="btn">
+                                        <div class="btnwrap"><a class="original" href="https://marongmarong.com/" target="_blank">Original</a></div>
+                                        <div class="btnwrap"><a class="clone" href="#">Clone</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                       </div>
                 </div>
                 <div class="icon">
