--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                     </div>
                     <div class="resume">
                         <div class="box">
-                            <a href="#">
+                            <a href="images/resume.pdf" target="_blank">
                                 <p>이력서</p>
                                 <p>보러가기</p>
                                 <div class="arrow"></div>
